# chatbot_showeasy

./: .env.example  .gitignore  CLAUDE.md  GEPA_playground.ipynb  GUARDRAILS.md  IMPLEMENTATION_SUMMARY.md  PLATFORM_CONTEXT.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  SIGNATURE_FIX_SUMMARY.md  USAGE_EXAMPLES.md  dataset.csv  deploy.sh  ecosystem.config.js  optimized_guardrail_model.json  playground.ipynb  pyproject.toml  setup.sh  test_signature_fix.py
.claude/: settings.local.json
datasets/: agent.csv  conversation_react_training.csv  postguardrails_training.csv  preguardrails_training.csv  query_generation_dataset.csv
debugging_journals/: 2025-10-16-dspy-module-return-type-error.md  2025-11-28-mem0-azure-openai-configuration-bug.md  2025-12-01-react-infinite-loop-fix.md
docs/: CONTINUOUS_LEARNING_GUIDE.md  about_us.md  contact_us.md  membership_types.md
examples/: ab_testing_example.py
migrations/: 001_booking_enquiries.sql  002_add_ticket_booking_type.sql  002_make_event_id_nullable.sql  003_add_confirmed_declined_status.sql
notebooks/: 01_generate_react_training_data.ipynb  02_generate_postguardrails_training_data.ipynb  03_train_conversation_orchestrator.ipynb  04_two_stage_optimization.ipynb  enhanced_metric.py  metric_usage_example.md
results/: gepa_optimization_log.json  optimization_report.md  preguardrails_metrics.csv
scripts/: README.md  continuous_learning_pipeline.py  curate_user_data.py  optimize_guardrails.py  test_email_sending.py  validate_refactoring.py
src/: __init__.py  azure_dspy.py  azure_dspy_work.py  main.py
(+129 files in other folders)
