[project]
name = "showeasy-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.0",
    "beautifulsoup4>=4.14.2",
    "dspy>=3.0.3",
    "fastapi>=0.118.0",
    "langfuse>=3.6.1",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.6",
    "mem0ai>=0.1.0",
    "mysql-connector-python>=9.4.0",
    "notebook>=7.4.7",
    "openai>=1.0.0",
    "openinference-instrumentation>=0.1.38",
    "openinference-instrumentation-dspy>=0.1.29",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "readability-lxml>=0.8.4.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.37.0",
    "wandb>=0.22.2",
    "weave>=0.52.10",
]
